Use resolveCiFriendliesOnly in examples instead of minimum for flattenMode
fix #373

--- a/src/site/xdoc/examples/example-simple-project.xml.vm
+++ b/src/site/xdoc/examples/example-simple-project.xml.vm
@@ -30,7 +30,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
-        <!--<version>${project.version}</version>-->
+        <version>${project.version}</version>
         <configuration>
         </configuration>
         <executions>
