--- a/src/site/xdoc/examples/example-multiple-versions.xml.vm
+++ b/src/site/xdoc/examples/example-multiple-versions.xml.vm
@@ -35,7 +35,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
-        <!--<version>${project.version}</version>-->
+        <version>${project.version}</version>
         <configuration>
         </configuration>
         <executions>
